--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,15 +11,8 @@ jobs:
     name: Package
     strategy:
       matrix:
-        os: [ windows, ubuntu, macos ]
-        target-arch: [ x86_64 ]
+        os: [ windows, ubuntu ]
         python-version: [ '3.11', 'pypy-3.9' ]
-        include:
-          - os: macos
-            target-arch: universal2
-        exclude:
-          - os: macos
-            target-arch: x86_64
     runs-on: ${{ matrix.os }}-latest
     steps:
       - name: Checkout
@@ -31,12 +24,34 @@ jobs:
       - name: Install dependencies
         run: pip install pyinstaller
       - name: Package
+        run: pyinstaller --distpath ./bin -F -n ${{ env.BINARY_NAME }} ${{ env.ENTRANCE_SCRIPT }}
+      - name: Upload Binary
+        uses: actions/upload-artifact@v3
+        with:
+          name: ${{ env.BINARY_NAME }}-${{ runner.os }}-${{ matrix.python-version }}-x86_64
+          path: bin/${{ env.BINARY_NAME }}*
+
+  package-macos:
+    name: Package for macOS
+    strategy:
+      matrix:
+        python-version: [ '3.11', 'pypy-3.9' ]
+    runs-on: macos-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Setup Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install dependencies
+        run: pip install pyinstaller
+      - name: Package
         run: >
-          pyinstaller --distpath ./bin -F -n ${{ env.BINARY_NAME }}
-          --target-arch ${{ matrix.target-arch }}
+          pyinstaller --distpath ./bin -F -n ${{ env.BINARY_NAME }} --target-arch universal2
           ${{ env.ENTRANCE_SCRIPT }}
       - name: Upload Binary
         uses: actions/upload-artifact@v3
         with:
-          name: ${{ env.BINARY_NAME }}-${{ runner.os }}-${{ matrix.python-version }}-${{ matrix.target-arch }}
+          name: ${{ env.BINARY_NAME }}-${{ runner.os }}-${{ matrix.python-version }}-universal
           path: bin/${{ env.BINARY_NAME }}*
