--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
         os: [ windows, ubuntu ]
         python-version: [ '3.11', 'pypy-3.9' ]
     runs-on: ${{ matrix.os }}-latest
+    continue-on-error: ${{ matrix.python-version == 'pypy-3.9' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -40,6 +41,7 @@ jobs:
       matrix:
         python-version: [ '3.11', 'pypy-3.9' ]
     runs-on: macos-latest
+    continue-on-error: ${{ matrix.python-version == 'pypy-3.9' }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
